<resources>
    <string name="app_name">Competitive PokeDX</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="typechart">Type Chart</string>
    <string-array name="menu">
        <item>Pokédex</item>
        <item>Movedex</item>
        <item>Abilities</item>
        <item>Items</item>
        <item>Locations</item>
        <item>Tutorials</item>
        <item>Tools</item>
        <item>Help</item>
    </string-array>
    <string-array name="characteristics">
        <item>Loves to eat</item>
        <item>Takes plenty of siestas</item>
        <item>Nods off a lot</item>
        <item>Scatters things often</item>
        <item>Likes to relax</item>
        <item>Proud of its power</item>
        <item>Likes to thrash about</item>
        <item>A little quick tempered</item>
        <item>Likes to fight</item>
        <item>Quick tempered</item>
        <item>Sturdy body</item>
        <item>Capable of taking hits</item>
        <item>Highly persistent</item>
        <item>Good endurance</item>
        <item>Good perseverance</item>
        <item>Highly curious</item>
        <item>Mischevious</item>
        <item>Thoroughly cunning</item>
        <item>Often lost in thought</item>
        <item>Very finicky</item>
        <item>String willed</item>
        <item>Somewhat vain</item>
        <item>strongly defiant</item>
        <item>Hates to lose</item>
        <item>Somewhat stubborn</item>
        <item>Likes to run</item>
        <item>Alert to sounds</item>
        <item>Impetuous and silly</item>
        <item>Somewhat of a clown</item>
        <item>Quick to flee</item>
    </string-array>
    <string name="compdex">Competitive Dex</string>
    <string name="ability">Ability</string>
    <string name="pokemonNumber">Number of Pokemon</string>
    <string name="go_to_tabs">Go to Pokemon Screen View</string>
    <string name="egg_group_name">Egg Group</string>
    <string name="go_to_abilitydex">Go to Ability Dex</string>
    <string name="move">Move</string>
    <string name="cd">Pokemon Image</string>
    <string name="go_to_pokedexview">PokeDX View</string>
   	<string name="items">ItemDex</string>
    <string name="pokedex">PokeDX</string>
    <string name="tiers">TiersDex</string>
    <string name="movedex">MoveDex</string>
    <string name="help">Help</string>
    <string name="desc">Corner Pokeball</string>
    <string name="status">All (Category)</string>
    <string-array name="pokedex_region_array">
        <item>All (Region)</item>
        <item>Kanto</item>
        <item>Johto</item>
        <item>Hoenn</item>
        <item>Sinnoh</item>
        <item>Unova</item>
        <item>Kalos</item>
    </string-array>
    <string-array name="pokedex_type_array">
        <item>All (Type)</item>
        <item>Bug</item>
        <item>Dark</item>
        <item>Dragon</item>
        <item>Electric</item>
        <item>Fairy</item>
        <item>Fighting</item>
        <item>Fire</item>
        <item>Flying</item>
        <item>Ghost</item>
        <item>Grass</item>
        <item>Ground</item>
        <item>Ice</item>
        <item>Normal</item>
        <item>Poison</item>
        <item>Psychic</item>
        <item>Rock</item>
        <item>Steel</item>
        <item>Water</item>
    </string-array>
    <string-array name="moves_type_array">
        <item>Bug</item>
        <item>Dark</item>
        <item>Dragon</item>
        <item>Electric</item>
        <item>Fairy</item>
        <item>Fighting</item>
        <item>Fire</item>
        <item>Flying</item>
        <item>Ghost</item>
        <item>Grass</item>
        <item>Ground</item>
        <item>Ice</item>
        <item>Normal</item>
        <item>Poison</item>
        <item>Psychic</item>
        <item>Rock</item>
        <item>Steel</item>
        <item>Water</item>
    </string-array>
    <string-array name="move_physicalspecial_array">
        <item>All</item>
        <item>Physical</item>
        <item>Special</item>
    </string-array>
    <string-array name="move_tm_hm_array">
        <item>All</item>
        <item>TMs</item>
        <item>HMs</item>
    </string-array>
    <string-array name="item_types_array">
        <item>All</item>
        <item>Evolution Stones</item>
        <item>In-Battle</item>
        <item>Mega Stones</item>
        <item>Breeding</item>
        <item>EV/Experience Training</item>
    </string-array>
</resources>