<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ashwin.competitivepokemon.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/fourthLL"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
        <Button
        android:id="@+id/pokedex"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="50dp"
        android:text="@string/pokedex"
        android:textSize="21sp" />
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        
        <Button
        android:id="@+id/locations"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="50dp"
        android:text="Locations"
        android:textSize="20sp" />
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/firstLL"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/fourthLL"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
        <Button
        android:id="@+id/tools"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="50dp"
        android:text="Tools"
        android:textSize="20sp" />
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        
        <Button
        android:id="@+id/help"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="50dp"
        android:shadowRadius="5"
        android:text="@string/help"
        android:textSize="20sp" />
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/thirdLL"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/fourthLL"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
        <Button
        android:id="@+id/abilitydex"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="50dp"
        android:text="@string/ability"
        android:textSize="20sp" />

        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        
         <Button
             android:id="@+id/movedex"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:text="@string/movedex"
             android:textSize="20sp" />
        
   </LinearLayout>
    
    <LinearLayout
        android:id="@+id/secondLL"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/firstLL"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
        <Button
        android:id="@+id/items"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="50dp"
        android:text="@string/items"
        android:textSize="20sp" />
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        
        <Button
        android:id="@+id/tiers"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="50dp"
        android:text="Tutorials"
        android:textSize="20sp" />
        
   </LinearLayout>

</RelativeLayout>